test/valid/SomeMath/Fibonacci.plume
/**
 * Class to calculate the nth number of the Fibonacci succession, 
 * given number n
 * @author 35237, Marcos Vasco
 */
class Fibonacci extends Object is

  field n : Integer
  
  method getFib : () -> Integer is
    if n == 0 then 0
    else if n == 1 then 1
    else new Fibonacci(n-1).getFib() + new Fibonacci(n-2).getFib()